pivot in design sprint 4

--- a/app/views/create-account/account-details.html
+++ b/app/views/create-account/account-details.html
@@ -60,11 +60,11 @@
           },
           items: [
             {
-              value: "Individual only",
+              value: "Adult or youth only",
               text: "Adult or youth only"
             },
             {
-              value: "Individual with parent to pay",
+              value: "Adult or youth with parent or guardian to pay",
               text: "Adult or youth with parent or guardian to pay"
             },
             {
