--- a/app/views/create-account/court-details/old/enforcement-court.html
+++ b/app/views/create-account/court-details/old/enforcement-court.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName = "Enforcement court" %}
+{% set pageName = "Court details" %}
 
 {% block beforeContent %}
 
@@ -23,8 +23,7 @@
           allowEmpty: false,
           label: {
             classes: "govuk-label--l",
-            text: pageName,
-            isPageHeading: true
+            text: 'Sending area or Local Justice Area (LJA)',
           },
           hint: {
             text: "Search using enforcement court code"
