--- a/app/views/create-account/personal-details.html
+++ b/app/views/create-account/personal-details.html
@@ -4,7 +4,7 @@
 
 {% block beforeContent %}
 
-<a href="../task-list.html" class="govuk-back-link">Back</a>
+<a href="task-list.html" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
@@ -15,7 +15,7 @@
       
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
-      <form method="post" novalidate action="../task-list?pdCompleted=true">
+      <form method="post" novalidate action="task-list?pdCompleted=true">
 
         <!-- TITLE -->
         <div>
