--- a/app/views/create-account/court-details/court-details.html
+++ b/app/views/create-account/court-details/court-details.html
@@ -4,7 +4,7 @@
 
 {% block beforeContent %}
 
-<a href="sending-court.html" class="govuk-back-link">Back</a>
+<a href="../task-list.html" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
@@ -15,9 +15,7 @@
 
       <h1 class="govuk-heading-l">{{pageName}}</h1>
 
-      <form method="post" novalidate action="check-answers">
-
-        <h2 class="govuk-heading-m">Sending court</h2>
+      <form method="post" novalidate action="../task-list?cdCompleted=true">
 
         {{ xGovukAutocomplete({
           id: "ljaCode",
@@ -27,7 +25,7 @@
           allowEmpty: false,
           label: {
             classes: "govuk-label--s",
-            text: 'Local Justice Area (LJA)'
+            text: 'Sending area or Local Justice Area (LJA)'
           },
           hint: {
             text: 'Search using the code or name of the area that sent the transfer '
@@ -133,9 +131,9 @@
               classes: "govuk-label--s"
           },
           hint: {
-              text: "This is the reference that will be used in the acknowledgement letter"
+              text: "Prosecutor Court Reference (PCR)"
           },
-          classes: "govuk-input--width-10 govuk-input--extra-letter-spacing govuk-!-margin-bottom-0",
+          classes: "govuk-input--width-10 govuk-input--extra-letter-spacing",
           id: "ljaReferenceCode",
           name: "ljaReferenceCode",
           attributes: { "oninput": "updateCharacterCount()" }, 
@@ -145,17 +143,17 @@
         <!-- <p id="charCount" class="govuk-hint govuk-body-s govuk-!-margin-bottom-6" style="margin-top: -20px">You have <span id="remainingChars">7</span> characters remaining</p> -->
 
 
-        <h2 class="govuk-heading-m">Enforcing court</h2>
+        {# Size modifiers: xl, l, m #}
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
         {{ xGovukAutocomplete({
           id: "enforcementCourt",
           name: "enforcementCourt",
-          classes: "govuk-!-margin-bottom-8",
           value: data['enforcementCourt'],
           allowEmpty: false,
           label: {
             classes: "govuk-label--s",
-            text: "Enforcement code",
+            text: "Enforcement court",
             isPageHeading: true
           },
           hint: {
@@ -208,7 +206,7 @@
 
 
         {{ govukButton({
-          text: "Continue"
+          text: "Return to task list"
         }) }}
 
       </form>
