--- a/app/views/create-account/personal-details/old/check-answers.html
+++ b/app/views/create-account/personal-details/old/check-answers.html
@@ -28,7 +28,7 @@
     {% endif %}
 
     {% if data['addressPostcode'] %}
-    {{data['addressPostcode']}}
+    {{data['addressPostcode'] | upper}}
     {% endif %}
   {% endset %}
 
