--- a/app/views/create-account/account-details.html
+++ b/app/views/create-account/account-details.html
@@ -31,16 +31,16 @@
           },
           items: [
             {
-              value: "Avon and Somerset",
-              text: "Avon and Somerset"
+              value: "Bedfordshire",
+              text: "Bedfordshire"
             },
             {
               value: "Cambridgeshire",
               text: "Cambridgeshire"
             },
             {
-              value: "North Wales",
-              text: "North Wales"
+              value: "Gwent",
+              text: "Gwent"
             }
           ]
         }) }}
