--- a/app/views/create-account/language-preference.html
+++ b/app/views/create-account/language-preference.html
@@ -4,7 +4,7 @@
 
 {% block beforeContent %}
 
-<a href="../task-list.html" class="govuk-back-link">Back</a>
+<a href="task-list.html" class="govuk-back-link">Back</a>
 
 {% endblock %}
 
@@ -14,7 +14,7 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">{{ pageName }}</h1>
 
-      <form method="post" novalidate action="check-answers?dh-status=started">
+      <form method="post" novalidate action="task-list?dh-status=started">
 
           {{ govukRadios({
             name: "documentLanguage",
